parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    TkTab
    TkComentario

Grammar

Rule 0     S' -> Start
Rule 1     Start -> TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
Rule 2     Start -> TkExecute InstC_lista TkEnd
Rule 3     Declaraciones_lista -> Declaraciones Declaraciones_lista
Rule 4     Declaraciones_lista -> Declaraciones
Rule 5     Declaraciones -> Type TkBot ID_list Comportamiento_lista TkEnd
Rule 6     Declaraciones -> Type TkBot ID_list TkEnd
Rule 7     Type -> TkInt
Rule 8     Type -> TkBool
Rule 9     Type -> TkChar
Rule 10    ID_list -> TkIdent TkComa ID_list
Rule 11    ID_list -> TkIdent
Rule 12    ID_list -> TkMe
Rule 13    Comportamiento_lista -> Comportamiento Comportamiento_lista
Rule 14    Comportamiento_lista -> Comportamiento
Rule 15    Comportamiento -> TkOn Condicion TkDospuntos InstRobot_lista TkEnd
Rule 16    Condicion -> TkActivation
Rule 17    Condicion -> TkDeactivation
Rule 18    Condicion -> Expr
Rule 19    Condicion -> TkDefault
Rule 20    InstC_lista -> InstC InstC_lista
Rule 21    InstC_lista -> InstC
Rule 22    InstC -> TkActivate ID_list TkPunto
Rule 23    InstC -> TkDeactivate ID_list TkPunto
Rule 24    InstC -> TkAdvance ID_list TkPunto
Rule 25    InstC -> InstrIf
Rule 26    InstC -> InstrWhile
Rule 27    InstC -> Alcance
Rule 28    Alcance -> TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
Rule 29    Alcance -> TkExecute InstC_lista TkEnd
Rule 30    InstrIf -> TkIf Expr TkDospuntos InstC_lista TkEnd
Rule 31    InstrIf -> TkIf Expr TkDospuntos InstC_lista TkElse TkDospuntos InstC_lista TkEnd
Rule 32    InstrWhile -> TkWhile Expr TkDospuntos InstC_lista TkEnd
Rule 33    InstRobot_lista -> InstRobot InstRobot_lista
Rule 34    InstRobot_lista -> InstRobot
Rule 35    InstRobot -> TkStore Expr TkPunto
Rule 36    InstRobot -> TkCollect TkPunto
Rule 37    InstRobot -> TkCollect TkAs ID_list TkPunto
Rule 38    InstRobot -> TkDrop Expr TkPunto
Rule 39    InstRobot -> Direccion TkPunto
Rule 40    InstRobot -> Direccion Expr TkPunto
Rule 41    InstRobot -> TkRead TkPunto
Rule 42    InstRobot -> TkRead TkAs ID_list TkPunto
Rule 43    InstRobot -> TkSend TkPunto
Rule 44    InstRobot -> TkReceive TkPunto
Rule 45    Direccion -> TkUp
Rule 46    Direccion -> TkDown
Rule 47    Direccion -> TkLeft
Rule 48    Direccion -> TkRight
Rule 49    Expr -> Expr TkSuma Expr
Rule 50    Expr -> Expr TkResta Expr
Rule 51    Expr -> Expr TkMult Expr
Rule 52    Expr -> Expr TkDiv Expr
Rule 53    Expr -> Expr TkMod Expr
Rule 54    Expr -> Expr TkConjuncion Expr
Rule 55    Expr -> Expr TkDisyuncion Expr
Rule 56    Expr -> Expr TkIgual Expr
Rule 57    Expr -> Expr TkNoigual Expr
Rule 58    Expr -> Expr TkMayor Expr
Rule 59    Expr -> Expr TkMenor Expr
Rule 60    Expr -> Expr TkMayorigual Expr
Rule 61    Expr -> Expr TkMenorigual Expr
Rule 62    Expr -> TkQuote TkNewLine TkQuote
Rule 63    Expr -> TkParabre Expr TkParcierra
Rule 64    Expr -> TkResta Expr
Rule 65    Expr -> TkNegacion Expr
Rule 66    Expr -> TkNum
Rule 67    Expr -> TkIdent
Rule 68    Expr -> TkCaracter
Rule 69    Expr -> TkTrue
Rule 70    Expr -> TkFalse
Rule 71    Expr -> TkMe

Terminals, with rules where they appear

TkActivate           : 22
TkActivation         : 16
TkAdvance            : 24
TkAs                 : 37 42
TkBool               : 8
TkBot                : 5 6
TkCaracter           : 68
TkChar               : 9
TkCollect            : 36 37
TkComa               : 10
TkComentario         : 
TkConjuncion         : 54
TkCreate             : 1 28
TkDeactivate         : 23
TkDeactivation       : 17
TkDefault            : 19
TkDisyuncion         : 55
TkDiv                : 52
TkDospuntos          : 15 30 31 31 32
TkDown               : 46
TkDrop               : 38
TkElse               : 31
TkEnd                : 1 2 5 6 15 28 29 30 31 32
TkExecute            : 1 2 28 29
TkFalse              : 70
TkIdent              : 10 11 67
TkIf                 : 30 31
TkIgual              : 56
TkInt                : 7
TkLeft               : 47
TkMayor              : 58
TkMayorigual         : 60
TkMe                 : 12 71
TkMenor              : 59
TkMenorigual         : 61
TkMod                : 53
TkMult               : 51
TkNegacion           : 65
TkNewLine            : 62
TkNoigual            : 57
TkNum                : 66
TkOn                 : 15
TkParabre            : 63
TkParcierra          : 63
TkPunto              : 22 23 24 35 36 37 38 39 40 41 42 43 44
TkQuote              : 62 62
TkRead               : 41 42
TkReceive            : 44
TkResta              : 50 64
TkRight              : 48
TkSend               : 43
TkStore              : 35
TkSuma               : 49
TkTab                : 
TkTrue               : 69
TkUp                 : 45
TkWhile              : 32
error                : 

Nonterminals, with rules where they appear

Alcance              : 27
Comportamiento       : 13 14
Comportamiento_lista : 5 13
Condicion            : 15
Declaraciones        : 3 4
Declaraciones_lista  : 1 3 28
Direccion            : 39 40
Expr                 : 18 30 31 32 35 38 40 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 63 64 65
ID_list              : 5 6 10 22 23 24 37 42
InstC                : 20 21
InstC_lista          : 1 2 20 28 29 30 31 31 32
InstRobot            : 33 34
InstRobot_lista      : 15 33
InstrIf              : 25
InstrWhile           : 26
Start                : 0
Type                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
    (2) Start -> . TkExecute InstC_lista TkEnd

    TkCreate        shift and go to state 2
    TkExecute       shift and go to state 1

    Start                          shift and go to state 3

state 1

    (2) Start -> TkExecute . InstC_lista TkEnd
    (20) InstC_lista -> . InstC InstC_lista
    (21) InstC_lista -> . InstC
    (22) InstC -> . TkActivate ID_list TkPunto
    (23) InstC -> . TkDeactivate ID_list TkPunto
    (24) InstC -> . TkAdvance ID_list TkPunto
    (25) InstC -> . InstrIf
    (26) InstC -> . InstrWhile
    (27) InstC -> . Alcance
    (30) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkEnd
    (31) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkElse TkDospuntos InstC_lista TkEnd
    (32) InstrWhile -> . TkWhile Expr TkDospuntos InstC_lista TkEnd
    (28) Alcance -> . TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
    (29) Alcance -> . TkExecute InstC_lista TkEnd

    TkActivate      shift and go to state 5
    TkDeactivate    shift and go to state 6
    TkAdvance       shift and go to state 10
    TkIf            shift and go to state 11
    TkWhile         shift and go to state 4
    TkCreate        shift and go to state 14
    TkExecute       shift and go to state 13

    InstrWhile                     shift and go to state 7
    InstrIf                        shift and go to state 8
    InstC_lista                    shift and go to state 15
    InstC                          shift and go to state 9
    Alcance                        shift and go to state 12

state 2

    (1) Start -> TkCreate . Declaraciones_lista TkExecute InstC_lista TkEnd
    (3) Declaraciones_lista -> . Declaraciones Declaraciones_lista
    (4) Declaraciones_lista -> . Declaraciones
    (5) Declaraciones -> . Type TkBot ID_list Comportamiento_lista TkEnd
    (6) Declaraciones -> . Type TkBot ID_list TkEnd
    (7) Type -> . TkInt
    (8) Type -> . TkBool
    (9) Type -> . TkChar

    TkInt           shift and go to state 16
    TkBool          shift and go to state 19
    TkChar          shift and go to state 17

    Type                           shift and go to state 18
    Declaraciones                  shift and go to state 20
    Declaraciones_lista            shift and go to state 21

state 3

    (0) S' -> Start .



state 4

    (32) InstrWhile -> TkWhile . Expr TkDospuntos InstC_lista TkEnd
    (49) Expr -> . Expr TkSuma Expr
    (50) Expr -> . Expr TkResta Expr
    (51) Expr -> . Expr TkMult Expr
    (52) Expr -> . Expr TkDiv Expr
    (53) Expr -> . Expr TkMod Expr
    (54) Expr -> . Expr TkConjuncion Expr
    (55) Expr -> . Expr TkDisyuncion Expr
    (56) Expr -> . Expr TkIgual Expr
    (57) Expr -> . Expr TkNoigual Expr
    (58) Expr -> . Expr TkMayor Expr
    (59) Expr -> . Expr TkMenor Expr
    (60) Expr -> . Expr TkMayorigual Expr
    (61) Expr -> . Expr TkMenorigual Expr
    (62) Expr -> . TkQuote TkNewLine TkQuote
    (63) Expr -> . TkParabre Expr TkParcierra
    (64) Expr -> . TkResta Expr
    (65) Expr -> . TkNegacion Expr
    (66) Expr -> . TkNum
    (67) Expr -> . TkIdent
    (68) Expr -> . TkCaracter
    (69) Expr -> . TkTrue
    (70) Expr -> . TkFalse
    (71) Expr -> . TkMe

    TkQuote         shift and go to state 25
    TkParabre       shift and go to state 31
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkNum           shift and go to state 22
    TkIdent         shift and go to state 27
    TkCaracter      shift and go to state 24
    TkTrue          shift and go to state 30
    TkFalse         shift and go to state 32
    TkMe            shift and go to state 29

    Expr                           shift and go to state 28

state 5

    (22) InstC -> TkActivate . ID_list TkPunto
    (10) ID_list -> . TkIdent TkComa ID_list
    (11) ID_list -> . TkIdent
    (12) ID_list -> . TkMe

    TkIdent         shift and go to state 33
    TkMe            shift and go to state 35

    ID_list                        shift and go to state 34

state 6

    (23) InstC -> TkDeactivate . ID_list TkPunto
    (10) ID_list -> . TkIdent TkComa ID_list
    (11) ID_list -> . TkIdent
    (12) ID_list -> . TkMe

    TkIdent         shift and go to state 33
    TkMe            shift and go to state 35

    ID_list                        shift and go to state 36

state 7

    (26) InstC -> InstrWhile .

    TkActivate      reduce using rule 26 (InstC -> InstrWhile .)
    TkDeactivate    reduce using rule 26 (InstC -> InstrWhile .)
    TkAdvance       reduce using rule 26 (InstC -> InstrWhile .)
    TkIf            reduce using rule 26 (InstC -> InstrWhile .)
    TkWhile         reduce using rule 26 (InstC -> InstrWhile .)
    TkCreate        reduce using rule 26 (InstC -> InstrWhile .)
    TkExecute       reduce using rule 26 (InstC -> InstrWhile .)
    TkEnd           reduce using rule 26 (InstC -> InstrWhile .)
    TkElse          reduce using rule 26 (InstC -> InstrWhile .)


state 8

    (25) InstC -> InstrIf .

    TkActivate      reduce using rule 25 (InstC -> InstrIf .)
    TkDeactivate    reduce using rule 25 (InstC -> InstrIf .)
    TkAdvance       reduce using rule 25 (InstC -> InstrIf .)
    TkIf            reduce using rule 25 (InstC -> InstrIf .)
    TkWhile         reduce using rule 25 (InstC -> InstrIf .)
    TkCreate        reduce using rule 25 (InstC -> InstrIf .)
    TkExecute       reduce using rule 25 (InstC -> InstrIf .)
    TkEnd           reduce using rule 25 (InstC -> InstrIf .)
    TkElse          reduce using rule 25 (InstC -> InstrIf .)


state 9

    (20) InstC_lista -> InstC . InstC_lista
    (21) InstC_lista -> InstC .
    (20) InstC_lista -> . InstC InstC_lista
    (21) InstC_lista -> . InstC
    (22) InstC -> . TkActivate ID_list TkPunto
    (23) InstC -> . TkDeactivate ID_list TkPunto
    (24) InstC -> . TkAdvance ID_list TkPunto
    (25) InstC -> . InstrIf
    (26) InstC -> . InstrWhile
    (27) InstC -> . Alcance
    (30) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkEnd
    (31) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkElse TkDospuntos InstC_lista TkEnd
    (32) InstrWhile -> . TkWhile Expr TkDospuntos InstC_lista TkEnd
    (28) Alcance -> . TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
    (29) Alcance -> . TkExecute InstC_lista TkEnd

    TkEnd           reduce using rule 21 (InstC_lista -> InstC .)
    TkElse          reduce using rule 21 (InstC_lista -> InstC .)
    TkActivate      shift and go to state 5
    TkDeactivate    shift and go to state 6
    TkAdvance       shift and go to state 10
    TkIf            shift and go to state 11
    TkWhile         shift and go to state 4
    TkCreate        shift and go to state 14
    TkExecute       shift and go to state 13

    InstrWhile                     shift and go to state 7
    InstrIf                        shift and go to state 8
    InstC_lista                    shift and go to state 37
    InstC                          shift and go to state 9
    Alcance                        shift and go to state 12

state 10

    (24) InstC -> TkAdvance . ID_list TkPunto
    (10) ID_list -> . TkIdent TkComa ID_list
    (11) ID_list -> . TkIdent
    (12) ID_list -> . TkMe

    TkIdent         shift and go to state 33
    TkMe            shift and go to state 35

    ID_list                        shift and go to state 38

state 11

    (30) InstrIf -> TkIf . Expr TkDospuntos InstC_lista TkEnd
    (31) InstrIf -> TkIf . Expr TkDospuntos InstC_lista TkElse TkDospuntos InstC_lista TkEnd
    (49) Expr -> . Expr TkSuma Expr
    (50) Expr -> . Expr TkResta Expr
    (51) Expr -> . Expr TkMult Expr
    (52) Expr -> . Expr TkDiv Expr
    (53) Expr -> . Expr TkMod Expr
    (54) Expr -> . Expr TkConjuncion Expr
    (55) Expr -> . Expr TkDisyuncion Expr
    (56) Expr -> . Expr TkIgual Expr
    (57) Expr -> . Expr TkNoigual Expr
    (58) Expr -> . Expr TkMayor Expr
    (59) Expr -> . Expr TkMenor Expr
    (60) Expr -> . Expr TkMayorigual Expr
    (61) Expr -> . Expr TkMenorigual Expr
    (62) Expr -> . TkQuote TkNewLine TkQuote
    (63) Expr -> . TkParabre Expr TkParcierra
    (64) Expr -> . TkResta Expr
    (65) Expr -> . TkNegacion Expr
    (66) Expr -> . TkNum
    (67) Expr -> . TkIdent
    (68) Expr -> . TkCaracter
    (69) Expr -> . TkTrue
    (70) Expr -> . TkFalse
    (71) Expr -> . TkMe

    TkQuote         shift and go to state 25
    TkParabre       shift and go to state 31
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkNum           shift and go to state 22
    TkIdent         shift and go to state 27
    TkCaracter      shift and go to state 24
    TkTrue          shift and go to state 30
    TkFalse         shift and go to state 32
    TkMe            shift and go to state 29

    Expr                           shift and go to state 39

state 12

    (27) InstC -> Alcance .

    TkActivate      reduce using rule 27 (InstC -> Alcance .)
    TkDeactivate    reduce using rule 27 (InstC -> Alcance .)
    TkAdvance       reduce using rule 27 (InstC -> Alcance .)
    TkIf            reduce using rule 27 (InstC -> Alcance .)
    TkWhile         reduce using rule 27 (InstC -> Alcance .)
    TkCreate        reduce using rule 27 (InstC -> Alcance .)
    TkExecute       reduce using rule 27 (InstC -> Alcance .)
    TkEnd           reduce using rule 27 (InstC -> Alcance .)
    TkElse          reduce using rule 27 (InstC -> Alcance .)


state 13

    (29) Alcance -> TkExecute . InstC_lista TkEnd
    (20) InstC_lista -> . InstC InstC_lista
    (21) InstC_lista -> . InstC
    (22) InstC -> . TkActivate ID_list TkPunto
    (23) InstC -> . TkDeactivate ID_list TkPunto
    (24) InstC -> . TkAdvance ID_list TkPunto
    (25) InstC -> . InstrIf
    (26) InstC -> . InstrWhile
    (27) InstC -> . Alcance
    (30) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkEnd
    (31) InstrIf -> . TkIf Expr TkDospuntos InstC_lista TkElse TkDospuntos InstC_lista TkEnd
    (32) InstrWhile -> . TkWhile Expr TkDospuntos InstC_lista TkEnd
    (28) Alcance -> . TkCreate Declaraciones_lista TkExecute InstC_lista TkEnd
    (29) Alcance -> . TkExecute InstC_lista TkEnd

    TkActivate      shift and go to state 5
    TkDeactivate    shift and go to state 6
    TkAdvance       shift and go to state 10
    TkIf            shift and go to state 11
    TkWhile         shift and go to state 4
    TkCreate        shift and go to state 14
    TkExecute       shift and go to state 13

    InstrWhile                     shift and go to state 7
    InstrIf                        shift and go to state 8
    InstC_lista                    shift and go to state 40
    InstC                          shift and go to state 9
    Alcance                        shift and go to state 12

state 14

    (28) Alcance -> TkCreate . Declaraciones_lista TkExecute InstC_lista TkEnd
    (3) Declaraciones_lista -> . Declaraciones Declaraciones_lista
    (4) Declaraciones_lista -> . Declaraciones
    (5) Declaraciones -> . Type TkBot ID_list Comportamiento_lista TkEnd
    (6) Declaraciones -> . Type TkBot ID_list TkEnd
    (7) Type -> . TkInt
    (8) Type -> . TkBool
    (9) Type -> . TkChar

    TkInt           shift and go to state 16
    TkBool          shift and go to state 19
    TkChar          shift and go to state 17

    Type                           shift and go to state 18
    Declaraciones                  shift and go to state 20
    Declaraciones_lista            shift and go to state 41

state 15

    (2) Start -> TkExecute InstC_lista . TkEnd

    TkEnd           shift and go to state 42


state 16

    (7) Type -> TkInt .

    TkBot           reduce using rule 7 (Type -> TkInt .)


state 17

    (9) Type -> TkChar .

    TkBot           reduce using rule 9 (Type -> TkChar .)


state 18

    (5) Declaraciones -> Type . TkBot ID_list Comportamiento_lista TkEnd
    (6) Declaraciones -> Type . TkBot ID_list TkEnd

    TkBot           shift and go to state 43


state 19

    (8) Type -> TkBool .

    TkBot           reduce using rule 8 (Type -> TkBool .)


state 20

    (3) Declaraciones_lista -> Declaraciones . Declaraciones_lista
    (4) Declaraciones_lista -> Declaraciones .
    (3) Declaraciones_lista -> . Declaraciones Declaraciones_lista
    (4) Declaraciones_lista -> . Declaraciones
    (5) Declaraciones -> . Type TkBot ID_list Comportamiento_lista TkEnd
    (6) Declaraciones -> . Type TkBot ID_list TkEnd
    (7) Type -> . TkInt
    (8) Type -> . TkBool
    (9) Type -> . TkChar

    TkExecute       reduce using rule 4 (Declaraciones_lista -> Declaraciones .)
    TkInt           shift and go to state 16
    TkBool          shift and go to state 19
    TkChar          shift and go to state 17

    Declaraciones                  shift and go to state 20
    Declaraciones_lista            shift and go to state 44
    Type                           shift and go to state 18

state 21

    (1) Start -> TkCreate Declaraciones_lista . TkExecute InstC_lista TkEnd

    TkExecute       shift and go to state 45


state 22

    (66) Expr -> TkNum .

    TkSuma          reduce using rule 66 (Expr -> TkNum .)
    TkResta         reduce using rule 66 (Expr -> TkNum .)
    TkMult          reduce using rule 66 (Expr -> TkNum .)
    TkDiv           reduce using rule 66 (Expr -> TkNum .)
    TkMod           reduce using rule 66 (Expr -> TkNum .)
    TkConjuncion    reduce using rule 66 (Expr -> TkNum .)
    TkDisyuncion    reduce using rule 66 (Expr -> TkNum .)
    TkIgual         reduce using rule 66 (Expr -> TkNum .)
    TkNoigual       reduce using rule 66 (Expr -> TkNum .)
    TkMayor         reduce using rule 66 (Expr -> TkNum .)
    TkMenor         reduce using rule 66 (Expr -> TkNum .)
    TkMayorigual    reduce using rule 66 (Expr -> TkNum .)
    TkMenorigual    reduce using rule 66 (Expr -> TkNum .)
    TkDospuntos     reduce using rule 66 (Expr -> TkNum .)
    TkParcierra     reduce using rule 66 (Expr -> TkNum .)
    TkPunto         reduce using rule 66 (Expr -> TkNum .)


state 23

    (64) Expr -> TkResta . Expr
    (49) Expr -> . Expr TkSuma Expr
    (50) Expr -> . Expr TkResta Expr
    (51) Expr -> . Expr TkMult Expr
    (52) Expr -> . Expr TkDiv Expr
    (53) Expr -> . Expr TkMod Expr
    (54) Expr -> . Expr TkConjuncion Expr
    (55) Expr -> . Expr TkDisyuncion Expr
    (56) Expr -> . Expr TkIgual Expr
    (57) Expr -> . Expr TkNoigual Expr
    (58) Expr -> . Expr TkMayor Expr
    (59) Expr -> . Expr TkMenor Expr
    (60) Expr -> . Expr TkMayorigual Expr
    (61) Expr -> . Expr TkMenorigual Expr
    (62) Expr -> . TkQuote TkNewLine TkQuote
    (63) Expr -> . TkParabre Expr TkParcierra
    (64) Expr -> . TkResta Expr
    (65) Expr -> . TkNegacion Expr
    (66) Expr -> . TkNum
    (67) Expr -> . TkIdent
    (68) Expr -> . TkCaracter
    (69) Expr -> . TkTrue
    (70) Expr -> . TkFalse
    (71) Expr -> . TkMe

    TkQuote         shift and go to state 25
    TkParabre       shift and go to state 31
    TkResta         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkNum           shift and go to state 22
    TkIdent         shift and go to state 27
    TkCaracter      shift and go to state 24
    TkTrue          shift and go to state 30
    TkFalse         shift and go to state 32
    TkMe            shift and go to state 29

    Expr                           shift and go to state 46

state 24

    (68) Expr -> TkCaracter .
